--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@evojs/callsite",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Nodejs callsite loader",
   "license": "MIT",
   "main": "index.js",
@@ -11,21 +11,21 @@
     "prepublishOnly": "npm run build && npm run test && node tools/prepublish.js",
     "release": "RELEASE_MODE=1 npm run prepublishOnly && npm publish --access public dist/",
     "test": "jest --coverage --detectOpenHandles",
-    "lint": "eslint \"src/**/*.ts\" -f codeframe --fix"
+    "lint": "eslint \"src/**/*.ts\" --fix --max-warnings=0"
   },
   "dependencies": {
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@evojs/eslint-plugin": "~4.0.1",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^16.11.64",
+    "@evojs/eslint-plugin": "~5.0.1",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^16.18.3",
     "@types/source-map-support": "^0.5.6",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.27.0",
     "glob": "^8.0.3",
-    "jest": "^29.1.2",
+    "jest": "^29.2.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
@@ -60,7 +60,7 @@
   "keywords": [
     "nodejs",
     "evojs",
-    "logger"
+    "callsite"
   ],
   "repository": {
     "type": "git",
